2012-05-09 Riccardo Mottola <rm@gnu.org>

	* PlaylistController.h
	* PlaylistController.m
	* Cynthiune.gorm
	* English.lproj/Localizable.strings
	Implement open playlist

2012-05-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/AO/ao.m fix crasher when jumping automatically
	  from one song to the next which have different bit rates
	  patch from Philippe Roussel

2012-05-05 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Sndio/Sndio.m Force to use little endian
	  format, to make it work on Big Endian architectures

2012-05-05 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/AO/ao.m fix resetting of audio parameters
	  when automatically jumping to next song with different
	  bit rate. Further, use AO_FMT_LITTLE, to fix output
	  on big endian systems, i.e. PowerPC. From Philippe
	  Roussel, Thanks! 

2012-05-04 Riccardo Mottola <rm@gnu.org>

	* GeneralPreference.m
	When reading preferences, transform in a mutable dictionary since that is what we expect.

	* SongInspectorController.m
	Don't set the inspector to status level: it is ugly and doesn't work on Unity and other WMs anyway.

2012-05-04 Riccardo Mottola <rm@gnu.org>

	* Bundles/ID3Tag/ID3Tag.m
	Compare strings with strcmp and not ==

2012-05-03  Philippe Roussel  <p.o.roussel@free.fr>

	* Bundles/AO/*
	New output bundle base on libao.

	* GNUmakefile
	Add AO bundle to the build, unless disable-ao=yes if used.

2012-05-03 Riccardo Mottola for Yavor Doganov

	* GNUmakefile
	* GeneralPreference.m
	* Bundles/ALSA/ALSA.h
	* Bundles/ALSA/ALSA.m
	* Bundles/ALSA/GNUmakefile
	* Bundles/ALSA/GNUmakefile.preamble
	ALSA backend fron Yavor with slight modifications

2012-05-02 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.preamble
	* Bundles/ASFTags/GNUmakefile
	* Bundles/ASFTags/GNUmakefile.preamble
	* Bundles/FLAC/GNUmakefile
	* Bundles/FLAC/GNUmakefile.preamble
	* Bundles/FLACTags/GNUmakefile
	* Bundles/FLACTags/GNUmakefile.preamble
	* Bundles/ID3Tag/GNUmakefile